bk_ida/gccida/c1/init_deps
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/init_deps/src/sched-deps.c:1894:18: error: unknown type name 'deps_0'
void  init_deps( deps_0 *deps) 
                 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/init_deps/src/sched-deps.c:1904:12: error: expected expression
*( _OWORD *)&deps->pending_read_insns = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/init_deps/src/sched-deps.c:1904:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&deps->pending_read_insns = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/init_deps/src/sched-deps.c:1905:12: error: expected expression
*( _OWORD *)&deps->pending_write_insns = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/init_deps/src/sched-deps.c:1905:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&deps->pending_write_insns = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/init_deps/src/sched-deps.c:1906:12: error: expected expression
*( _OWORD *)&deps->pending_lists_length = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/init_deps/src/sched-deps.c:1906:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&deps->pending_lists_length = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/init_deps/src/sched-deps.c:1907:12: error: expected expression
*( _OWORD *)&deps->last_function_call = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/init_deps/src/sched-deps.c:1907:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&deps->last_function_call = 0LL; 
   ^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/init_deps/src/obj/sched-deps.o] Error 1
